	* src/browser.c (findnextfile_wrap_reset): Elide this function,
	and rename 'search_last_file' to 'came_full_circle'.
	* src/browser.c (filesearch_init, do_fileresearch): Avoid setting
	'focusing' when searching only for filenames.
	* src/browser.c (findnextfile, do_filesearch, do_fileresearch):
	Greatly simplify the searching for the next matching filename.

2015-04-05  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Expand on nano's features, condense the
	synopsis, and "online" means something else to most people.

2015-04-03  Benno Schulenberg  <bensberg@justemail.net>
	* README: Update text to the fifth milestone, 2.4.x, plus tweaks.
	* src/rcfile.c: Remove two superfluous (because nested) #ifndefs.
	* src/rcfile.c (parse_rcfile): Ignore any magic when libmagic was
	disabled, and ignore a formatter when spell checking was disabled.

2015-03-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (search_init_globals, search_replace_abort),
	src/winio.c (edit_redraw), src/proto.h, src/global.c: When finding
	an off-screen string, put it on the center line of the screen and
	not on the bottom or top line.  This restores the old behaviour
	that was unintentionally changed in r5149 six days ago.
	* src/winio.c (edit_refresh): When pasting lines on the bottom line,
	only scroll the required number of lines and not half a screen --
	that is, when smooth scrolling is enabled.
	* doc/syntax/changelog.nanorc: Also colour a series of changed files
	that spans more than one line.

2015-03-27  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_alt_speller): Adjust the end point of the marked
	region for any change in length of the region's last line.

2015-03-27  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/patch.nanorc: Recognize also Debian package diffs.
	Fixes https://bugs.launchpad.net/ubuntu/+source/nano/+bug/1300565
	requested by Rolf Leggewie.
	* src/search.c (do_replace_loop): Adjust some whitespace and wrapping.