@@ -2344,6 +2344,9 @@ void bottombars(int menu)
     subnfunc *f;
     const sc *s;
 
+    /* Set the global variable to the given menu. */
+    currmenu = menu;
+
     if (ISSET(NO_HELP))
 	return;
 
